--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -51,41 +51,141 @@
   @id data_transfer_over_time1
   tag jfrog.rt.artifactory.request
   rate 10
-  dummy '{"request_url":"/api/docker/johnp-docker/test/centos","repo":"johnp-docker","artifact":"centos","dockerRepo":"johnp-docker","dockerImage":"centos","response_content_length":1235343,"request_content_length":34323,"return_status":200,"remote_address":"64.55.33.22","data_download": 1235343,"data_upload":34323}'
+  dummy '{"user":"johnp","request_method":"GET","request_url":"/api/docker/johnp-docker/test/centos","repo":"","artifact":"","dockerRepo":"johnp-docker","dockerImage":"centos","response_content_length":1235343,"request_content_length":34323,"return_status":200,"remote_address":"64.55.33.22","data_download": 1235343,"data_upload":34323}'
 </source>
 <source>
   @type dummy
   @id data_transfer_over_time2
   tag jfrog.rt.artifactory.request
   rate 2
-  dummy '{"request_url":"/api/docker/docker-local/test/ubuntu","repo":"docker-local","artifact":"ubuntu","dockerRepo":"docker-local","dockerImage":"ubuntu","response_content_length":1235543,"request_content_length":123,"return_status":401,"remote_address":"33.44.11.22","data_download": 1235543,"data_upload":123}'
+  dummy '{"user":"jefff","request_method":"GET","request_url":"/api/docker/docker-local/test/ubuntu","repo":"","artifact":"","dockerRepo":"docker-local","dockerImage":"ubuntu","response_content_length":1235543,"request_content_length":123,"return_status":200,"remote_address":"33.44.11.22","data_download": 1235543,"data_upload":123}'
 </source>
 <source>
   @type dummy
   @id data_transfer_over_time3
   tag jfrog.rt.artifactory.request
   rate 5
-  dummy '{"request_url":"/api/docker/docker-local2/test/oraclelinux","repo":"docker-local2","artifact":"oraclelinux","dockerRepo":"docker-local2","dockerImage":"oraclelinux","response_content_length":5535343,"request_content_length":33334323,"return_status":203,"remote_address":"10.0.3.15","data_download": 5535343,"data_upload":33334323}'
+  dummy '{"user":"vinaya","request_method":"PUT","request_url":"/api/docker/docker-local2/test/oraclelinux","repo":"","artifact":"","dockerRepo":"docker-local2","dockerImage":"oraclelinux","response_content_length":5535343,"request_content_length":33334323,"return_status":201,"remote_address":"10.0.3.15","data_download": 5535343,"data_upload":33334323}'
 </source>
 <source>
   @type dummy
   @id data_transfer_over_time4
   tag jfrog.rt.artifactory.request
   rate 8
-  dummy '{"request_url":"/api/docker/docker-local3/test/redhat-ubi8","repo":"docker-local3","artifact":"redhat-ubi8","dockerRepo":"docker-local3","dockerImage":"redhat-ubi8","response_content_length":5235343,"request_content_length":3499323,"return_status":201,"remote_address":"107.1.3.34","data_download": 5235343,"data_upload":3499323}'
+  dummy '{"user":"johnp","request_method":"PUT","request_url":"/api/docker/docker-local3/test/redhat-ubi8","repo":"","artifact":"","dockerRepo":"docker-local3","dockerImage":"redhat-ubi8","response_content_length":10,"request_content_length":3499323,"return_status":201,"remote_address":"107.1.3.34","data_download": 10,"data_upload":3499323}'
 </source>
 <source>
   @type dummy
   @id data_transfer_over_time5
   tag jfrog.rt.artifactory.request
-  dummy '{"request_url":"/api/docker/docker-local4/test/debian","repo":"docker-local4","artifact":"debian","dockerRepo":"docker-local4","dockerImage":"debian","response_content_length":500,"request_content_length":1000,"return_status":201,"remote_address":"1.1.3.2","data_download": 500,"data_upload":1000}'
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/docker/docker-local4/test/debian","repo":"","artifact":"","dockerRepo":"docker-local4","dockerImage":"debian","response_content_length":10,"request_content_length":55555555,"return_status":201,"remote_address":"1.1.3.2","data_download": 10,"data_upload":55555555}'
 </source>
 #send empty string
 <source>
   @type dummy
   @id data_transfer_over_time6
   tag jfrog.rt.artifactory.request
-  dummy '{"request_url":"/api/docker/docker-local4/test/debian","repo":"","artifact":"","dockerRepo":"","dockerImage":"","response_content_length":345,"request_content_length":576,"return_status":201,"remote_address":"1.1.3.6","data_download": 345,"data_upload":576}'
+  dummy '{"user":"vinaya","request_method":"GET","request_url":"/api/docker/docker-local4/test/debian","repo":"","artifact":"","dockerRepo":"docker-local4","dockerImage":"debian","response_content_length":99999999999,"request_content_length":10,"return_status":200,"remote_address":"1.1.3.6","data_download": 345,"data_upload":576}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time7
+  tag jfrog.rt.artifactory.request
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev-local/7_artifact.zip","repo":"generic-dev-local","artifact":"1_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":2248334,"request_content_length":0,"return_status":200,"remote_address":"1.1.3.2","data_download": 2248334,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time8
+  tag jfrog.rt.artifactory.request
+  rate 7
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev-local/8_artifact.zip","repo":"generic-dev-local","artifact":"2_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":2248334,"request_content_length":0,"return_status":200,"remote_address":"1.1.7.2","data_download": 344444,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time9
+  tag jfrog.rt.artifactory.request
+  rate 5
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev-local/9_artifact.zip","repo":"generic-dev-local","artifact":"3_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":2248334,"request_content_length":0,"return_status":200,"remote_address":"1.1.3.2","data_download": 3454554,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time10
+  tag jfrog.rt.artifactory.request
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev-local/10_artifact.zip","repo":"generic-dev-local","artifact":"4_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":2248334,"request_content_length":0,"return_status":200,"remote_address":"1.1.3.5","data_download": 22343344,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time11
+  tag jfrog.rt.artifactory.request
+  rate 10
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev1-local/11_artifact.zip","repo":"generic-dev1-local","artifact":"11_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":8911114,"request_content_length":0,"return_status":200,"remote_address":"1.1.3.2","data_download": 2248334,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time12
+  tag jfrog.rt.artifactory.request
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev1-local/12_artifact.zip","repo":"generic-dev1-local","artifact":"12_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":7821122,"request_content_length":0,"return_status":200,"remote_address":"1.1.7.2","data_download": 344444,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time13
+  tag jfrog.rt.artifactory.request
+  rate 5
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev1-local/13_artifact.zip","repo":"generic-dev1-local","artifact":"13_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":2333,"request_content_length":0,"return_status":200,"remote_address":"1.1.3.2","data_download": 3454554,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time14
+  tag jfrog.rt.artifactory.request
+  rate 3
+  dummy '{"user":"danielmi","request_method":"GET","request_url":"/api/download/generic-dev1-local/14_artifact.zip","repo":"generic-dev1-local","artifact":"14_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":2112334,"request_content_length":0,"return_status":200,"remote_address":"1.1.3.5","data_download": 22343344,"data_upload":0}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time15
+  tag jfrog.rt.artifactory.request
+  rate 1
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev-local/15_artifact.zip","repo":"generic-dev-local","artifact":"15_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":10,"request_content_length":344444,"return_status":200,"remote_address":"1.1.7.2","data_download": 10,"data_upload":344444}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time16
+  tag jfrog.rt.artifactory.request
+  rate 1
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev-local/16_artifact.zip","repo":"generic-dev-local","artifact":"16_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":10,"request_content_length":2248334,"return_status":200,"remote_address":"1.1.3.2","data_download": 10,"data_upload":2248334}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time17
+  tag jfrog.rt.artifactory.request
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev-local/17_artifact.zip","repo":"generic-dev-local","artifact":"17_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":10,"request_content_length":2248334,"return_status":200,"remote_address":"1.1.3.5","data_download": 10,"data_upload":2248334}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time18
+  tag jfrog.rt.artifactory.request
+  rate 1
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev1-local/18_artifact.zip","repo":"generic-dev1-local","artifact":"18_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":10,"request_content_length":8911114,"return_status":200,"remote_address":"1.1.3.2","data_download": 10,"data_upload":8911114}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time19
+  tag jfrog.rt.artifactory.request
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev1-local/19_artifact.zip","repo":"generic-dev1-local","artifact":"19_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":344444,"request_content_length":10,"return_status":200,"remote_address":"1.1.7.2","data_download": 10,"data_upload":344444}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time20
+  tag jfrog.rt.artifactory.request
+  rate 1
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev1-local/20_artifact.zip","repo":"generic-dev1-local","artifact":"20_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":10,"request_content_length":3454554,"return_status":200,"remote_address":"1.1.3.2","data_download": 10,"data_upload":3454554}'
+</source>
+<source>
+  @type dummy
+  @id data_transfer_over_time21
+  tag jfrog.rt.artifactory.request
+  rate 1
+  dummy '{"user":"danielmi","request_method":"PUT","request_url":"/api/download/generic-dev1-local/21_artifact.zip","repo":"generic-dev1-local","artifact":"21_artifact.zip","dockerRepo":"","dockerImage":"","response_content_length":10,"request_content_length":2112334,"return_status":200,"remote_address":"1.1.3.5","data_download": 10,"data_upload":2112334}'
 </source>
 
 # Audit Actions
@@ -94,28 +194,28 @@
   @id audit_actions1
   tag jfrog.rt.access.audit
   rate 1
-  dummy '{"user":"johnp"}'
+  dummy '{"user":"johnp","event_type":"C","event":"TKN"}'
 </source>
 <source>
   @type dummy
   @id audit_actions2
   tag jfrog.rt.access.audit
   rate 2
-  dummy '{"user":"vinaya"}'
+  dummy '{"user":"vinaya","event_type":"C","event":"TKN"}'
 </source>
 <source>
   @type dummy
   @id audit_actions3
   tag jfrog.rt.access.audit
   rate 3
-  dummy '{"user":"mahithab"}'
+  dummy '{"user":"mahithab","event_type":"C","event":"USR"}'
 </source>
 <source>
   @type dummy
   @id audit_actions4
   tag jfrog.rt.access.audit
   rate 4
-  dummy '{"user":"jefff"}'
+  dummy '{"user":"jefff","event_type":"C","event":"GRP"}'
 </source>
 
 # 500 errors
@@ -123,7 +223,7 @@
   @type dummy
   @id five_hundrend_errors
   tag jfrog.rt.artifactory.request
-  dummy '{"request_url":"/api/docker/error","repo":"","artifact":"","dockerRepo":"","dockerImage":"","response_content_length":0,"request_content_length":0,"return_status":500,"remote_address":"4.1.5.6","data_download": 0,"data_upload":0}'
+  dummy '{"user":"mahithab","request_method":"GET","request_url":"/api/docker/error","repo":"","artifact":"","dockerRepo":"","dockerImage":"","response_content_length":0,"request_content_length":0,"return_status":500,"remote_address":"4.1.5.6","data_download": 0,"data_upload":0}'
 </source>
 
 # Xray Log Level Errors
@@ -139,7 +239,22 @@
   @type dummy
   @id xray_five_hundrend_errors
   tag jfrog.xray.xray.request
-  dummy '{"return_status":"500"}'
+  dummy '{"request_method":"GET","request_url":"/api/docker/error","return_status":"500","remote_address":"107.1.3.34"}'
+</source>
+
+# Xray Dummy requests
+<source>
+  @type dummy
+  @id xray_request_200
+  tag jfrog.xray.xray.request
+  dummy '{"request_method":"GET","request_url":"/api/200","return_status":"200","remote_address":"107.1.3.34"}'
+  rate 4
+</source>
+<source>
+  @type dummy
+  @id xray_request_403
+  tag jfrog.xray.xray.request
+  dummy '{"request_method":"GET","request_url":"/api/403","return_status":"403","remote_address":"110.1.3.34"}'
 </source>
 
 # DENIED LOGINS
@@ -148,42 +263,63 @@
   @id denied_logins1
   tag jfrog.rt.artifactory.access
   rate 5
-  dummy '{"action_response":"DENIED Login","ip":"10.15.1.2","username":"johnp"}'
+  dummy '{"action_response":"DENIED Login","ip":"10.15.1.2","user":"johnp"}'
 </source>
 <source>
   @type dummy
   @id denied_logins2
   tag jfrog.rt.artifactory.access
   rate 6
-  dummy '{"action_response":"DENIED LOGIN","ip":"51.10.13.22","username":"vinaya"}'
+  dummy '{"action_response":"DENIED LOGIN","ip":"51.10.13.22","user":"vinaya"}'
 </source>
 <source>
   @type dummy
   @id denied_logins3
   tag jfrog.rt.artifactory.access
   rate 4
-  dummy '{"action_response":"DENIED LOGIN","ip":"64.5.12.23","username":"mahithab"}'
+  dummy '{"action_response":"DENIED LOGIN","ip":"64.5.12.23","user":"mahithab"}'
 </source>
 <source>
   @type dummy
   @id denied_logins4
   tag jfrog.rt.artifactory.access
-  rate 3
-  dummy '{"action_response":"DENIED","ip":"107.10.12.27","username":"idog"}'
+  rate 33
+  dummy '{"action_response":"DENIED LOGIN","ip":"107.10.22.27","user":"badguy"}'
 </source>
 <source>
   @type dummy
   @id denied_logins5
   tag jfrog.rt.artifactory.access
-  rate 5
-  dummy '{"action_response":"DENIED","ip":"11.11.14.24","username":"jefff"}'
+  rate 25
+  dummy '{"action_response":"DENIED LOGIN","ip":"106.15.14.24","user":"badguy"}'
 </source>
 <source>
   @type dummy
   @id denied_logins6
   tag jfrog.rt.artifactory.access
-  rate 60
-  dummy '{"action_response":"DENIED","ip":"10.0.1.2","username":"badguy"}'
+  rate 30
+  dummy '{"action_response":"DENIED LOGIN","ip":"105.0.1.2","user":"badguy"}'
+</source>
+<source>
+  @type dummy
+  @id denied1
+  tag jfrog.rt.artifactory.access
+  rate 3
+  dummy '{"action_response":"DENIED","ip":"107.10.12.27","user":"idog"}'
+</source>
+<source>
+  @type dummy
+  @id denied2
+  tag jfrog.rt.artifactory.access
+  rate 1
+  dummy '{"action_response":"DENIED","ip":"11.11.14.24","user":"jefff"}'
+</source>
+<source>
+  @type dummy
+  @id denied3
+  tag jfrog.rt.artifactory.access
+  rate 25
+  dummy '{"action_response":"DENIED","ip":"10.0.1.2","user":"badguy"}'
 </source>
 
 # ACCEPTED DEPLOY
@@ -192,21 +328,21 @@
   @id accepted_deploy1
   tag jfrog.rt.artifactory.access
   rate 1
-  dummy '{"action_response":"ACCEPTED DEPLOY","ip":"64.5.12.23","username":"mahithab"}'
+  dummy '{"action_response":"ACCEPTED DEPLOY","ip":"64.5.12.23","user":"mahithab"}'
 </source>
 <source>
   @type dummy
   @id accepted_deploy2
   tag jfrog.rt.artifactory.access
   rate 2
-  dummy '{"action_response":"ACCEPTED DEPLOY","ip":"107.10.12.27","username":"idog"}'
+  dummy '{"action_response":"ACCEPTED DEPLOY","ip":"107.10.12.27","user":"idog"}'
 </source>
 <source>
   @type dummy
   @id accepted_deploy3
   tag jfrog.rt.artifactory.access
   rate 3
-  dummy '{"action_response":"ACCEPTED DEPLOY","ip":"11.11.14.24","username":"jefff"}'
+  dummy '{"action_response":"ACCEPTED DEPLOY","ip":"11.11.14.24","user":"jefff"}'
 </source>
 
 # WHAT LOG IT WAS INTO THE JSON
@@ -223,29 +359,37 @@
 
   <metric>
     name jfrog_rt_data_download
-    type gauge
+    type counter
     desc artifactory data download
     key data_download
     <labels>
       host ${hostname}
       remote_address ${remote_address}
+      artifact ${artifact}
       repo ${repo}
+      dockerImage ${dockerImage}
+      dockerRepo ${dockerRepo}
       response_content_length ${response_content_length}
       data_download ${data_download}
+      method ${request_method}
     </labels>
   </metric>
 
   <metric>
     name jfrog_rt_data_upload
-    type gauge
+    type counter
     desc artifactory data upload
     key data_upload
     <labels>
       host ${hostname}
       remote_address ${remote_address}
+      artifact ${artifact}
       repo ${repo}
+      dockerImage ${dockerImage}
+      dockerRepo ${dockerRepo}
       request_content_length ${request_content_length}
       data_upload ${data_upload}
+      method ${request_method}
     </labels>
   </metric>
 
@@ -254,14 +398,16 @@
     type counter
     desc artifactory requests
     <labels>
+      user ${user}
       host ${hostname}
       request_url ${request_url}
-      return_status ${return_status}
       repo ${repo}
       artifact ${artifact}
       dockerRepo ${dockerRepo}
       dockerImage ${dockerImage}
+      return_status ${return_status}
       remote_address ${remote_address}
+      method ${request_method}
     </labels>
   </metric>
 </filter>
@@ -288,10 +434,58 @@
   desc artifactory access
   <labels>
     host ${hostname}
-    username ${username}
+    user ${user}
     action_response ${action_response}
     ip ${ip}
   </labels>
 </metric>
 
+</filter>
+
+<filter jfrog.rt.access.audit>
+@type prometheus
+
+<metric>
+  name jfrog_rt_access_audit
+  type counter
+  desc artifactory access audit
+  <labels>
+    host ${hostname}
+    user ${user}
+    event_type ${event_type}
+    event ${event}
+  </labels>
+</metric>
+
+</filter>
+
+
+<filter jfrog.xray.xray.request>
+@type prometheus
+
+<metric>
+  name jfrog_xray_req
+  type counter
+  desc xray requests
+  <labels>
+    host ${hostname}
+    remote_address ${remote_address}
+    request_url ${request_url}
+    return_status ${return_status}
+    method ${request_method}
+  </labels>
+</metric>
+</filter>
+
+<filter jfrog.xray.**.service>
+@type prometheus
+<metric>
+  name jfrog_xray_log_level
+  type counter
+  desc xray log_levels
+  <labels>
+    host ${hostname}
+    log_level ${log_level}
+  </labels>
+</metric>
 </filter>
