Rename jfrog_rt_access_audit metric to jfrog_rt_access_audit_total
See promtool check metrics output

jfrog_rt_access_audit counter metrics should have "_total" suffix

Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -446,7 +446,7 @@
 @type prometheus
 
 <metric>
-  name jfrog_rt_access_audit
+  name jfrog_rt_access_audit_total
   type counter
   desc artifactory access audit
   <labels>
