Rename jfrog_rt_data_download metric to jfrog_rt_data_download_total
See promtool check metrics output

jfrog_rt_data_download counter metrics should have "_total" suffix

Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -358,7 +358,7 @@
   @type prometheus
 
   <metric>
-    name jfrog_rt_data_download
+    name jfrog_rt_data_download_total
     type counter
     desc artifactory data download
     key data_download
