Rename jfrog_rt_log_level metric to jfrog_rt_log_level_total
See promtool check metrics output

jfrog_rt_log_level counter metrics should have "_total" suffix

Signed-off-by: Mario Trangoni <mjtrangoni@gmail.com>

--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -415,7 +415,7 @@
 <filter jfrog.rt.artifactory.service>
 @type prometheus
   <metric>
-    name jfrog_rt_log_level
+    name jfrog_rt_log_level_total
     type counter
     desc artifactory log_levels
     <labels>
