--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -394,7 +394,7 @@
   </metric>
 
   <metric>
-    name jfrog_rt_req
+    name jfrog_rt_req_total
     type counter
     desc artifactory requests
     <labels>
