--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -28,7 +28,7 @@ common:
           name: data-volume
   customSidecarContainers: |
     - name: "xray-fluentd-sidecar"
-      image: "docker.io/bitnami/fluentd"
+      image: "releases-docker.jfrog.io/reg2/fluentd-1.12.0"
       imagePullPolicy: "IfNotPresent"
       volumeMounts:
         - mountPath: "{{ .Values.xray.persistence.mountPath }}"
