Additional Meta Data Corrections to fluentd config
Additional Meta Data Corrections to fluentd config

--- a/helm/jfrog-platform-values.yaml
+++ b/helm/jfrog-platform-values.yaml
@@ -78,6 +78,8 @@ artifactory:
           - port: metrics
             interval: 15s
 xray:
+  openMetrics:
+    enabled: true
   enabled: true
   common:
     customSidecarContainers: |
