--- a/helm/artifactory-values.yaml
+++ b/helm/artifactory-values.yaml
@@ -9,7 +9,7 @@ artifactory:
         - '-c'
         - >
           mkdir -p {{ .Values.artifactory.persistence.mountPath }}/etc/fluentd/;
-          wget https://raw.githubusercontent.com/jfrog/log-analytics-prometheus/master/fluent.conf.rt -O {{ .Values.artifactory.persistence.mountPath }}/etc/fluentd/fluentd.conf
+          curl https://raw.githubusercontent.com/jfrog/log-analytics-prometheus/master/fluent.conf.rt -o {{ .Values.artifactory.persistence.mountPath }}/etc/fluentd/fluentd.conf
       volumeMounts:
         - mountPath: "{{ .Values.artifactory.persistence.mountPath }}"
           name: artifactory-volume
@@ -57,7 +57,6 @@ additionalResources: |
     selector:
       app: {{ template "artifactory.name" . }}
       component: "{{ .Values.artifactory.name }}"
-      release: {{ .Release.Name }}
   ---
   apiVersion: monitoring.coreos.com/v1
   kind: ServiceMonitor
