Final Set of changes to template and documentation
Final Set of changes to template and documentation

Component and App has to match, reason is the prometheus installation should not be bound to any release name. Hence these changes have been corrected

--- a/helm/artifactory-values.yaml
+++ b/helm/artifactory-values.yaml
@@ -42,7 +42,7 @@ additionalResources: |
     labels:
       app: {{ template "artifactory.name" . }}
       chart: {{ template "artifactory.chart" . }}
-      component: metrics
+      component: {{ template "artifactory.name" . }}
       heritage: {{ .Release.Service }}
       release: {{ .Release.Name }}
       {{- with .Values.artifactory.labels }}
@@ -56,7 +56,7 @@ additionalResources: |
       protocol: TCP
     selector:
       app: {{ template "artifactory.name" . }}
-      component: "{{ .Values.artifactory.name }}"
+      component: {{ template "artifactory.name" . }}
   ---
   apiVersion: monitoring.coreos.com/v1
   kind: ServiceMonitor
@@ -72,7 +72,7 @@ additionalResources: |
     selector:
       matchLabels:
         app: {{ template "artifactory.name" . }}
-        component: metrics
+        component: {{ template "artifactory.name" . }}
     endpoints:
         - port: metrics
           interval: 15s
