--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -1,7 +1,7 @@
 global:
   jfrog:
     observability:
-      branch: prometheus_revamp
+      branch: master
   prometheus: 
     loki_url: http:\/\/loki.jfrog-plg:3100
     release_name: prometheus
